# databrary-incubator

./: .gitignore  README.md  smoketest.side
databrary-libdepend-diagnostic/: .coffeelint  .ghci  .gitignore  .jshintrc  README.md  Setup.hs.backup  cabal.config  databrary.cabal  package.json  transcode  transcode-setup  transctl.sh  volume.json
databrary-libdepend-diagnostic/Data/ByteString/Builder/: Escape.hs
databrary-libdepend-diagnostic/Data/RangeSet/: Parse.hs
databrary-libdepend-diagnostic/Databrary/: Action.hs  Context.hs  Files.hs  HTTP.hs  Has.hs  JSON.hs  Main.hs  Ops.hs  Routes.hs  String.hs  TMaybe.hs  Web.hs
databrary-libdepend-diagnostic/Databrary/Action/: Form.hs  Request.hs  Response.hs  Route.hs  Run.hs  Types.hs
databrary-libdepend-diagnostic/Databrary/Controller/: API.hs  Activity.hs  Analytics.hs  Angular.hs  Angular.hs-boot  Asset.hs  Asset.hs-boot  AssetSegment.hs  AssetSegment.hs-boot  Authorize.hs  Authorize.hs-boot  CSV.hs  Citation.hs  Comment.hs  Comment.hs-boot  Container.hs  Container.hs-boot  Email.hs  Excerpt.hs  Form.hs  Format.hs  Funding.hs  IdSet.hs  Ingest.hs  Ingest.hs-boot  Login.hs  Login.hs-boot  Metric.hs  Notification.hs  Party.hs  Party.hs-boot  Paths.hs  Periodic.hs  Periodic.hs-boot  Permission.hs  Record.hs  Record.hs-boot  Register.hs  Register.hs-boot  Root.hs  (+20 more)
databrary-libdepend-diagnostic/Databrary/EZID/: ANVL.hs  API.hs  DataCite.hs  Service.hs  Volume.hs
databrary-libdepend-diagnostic/Databrary/HTTP/: Client.hs  Cookie.hs  File.hs  Form.hs  Parse.hs  Path.hs  Request.hs  Route.hs
databrary-libdepend-diagnostic/Databrary/HTTP/Form/: Data.hs  Deform.hs  Errors.hs  View.hs
databrary-libdepend-diagnostic/Databrary/HTTP/Method/: Map.hs
databrary-libdepend-diagnostic/Databrary/HTTP/Path/: JS.hs  Parser.hs  Swagger.hs
databrary-libdepend-diagnostic/Databrary/Ingest/: Action.hs  JSON.hs  Service.hs
databrary-libdepend-diagnostic/Databrary/Model/: Activity.hs  Age.hs  Asset.hs  AssetRevision.hs  AssetSegment.hs  AssetSlot.hs  Audit.hs  Authorize.hs  Category.hs  Citation.hs  Comment.hs  Container.hs  Enum.hs  Excerpt.hs  Format.hs  Funding.hs  GeoNames.hs  Id.hs  Identity.hs  Ingest.hs  Kind.hs  Measure.hs  Metric.hs  Notification.hs  ORCID.hs  Offset.hs  Paginate.hs  Party.hs  Periodic.hs  Permission.hs  Record.hs  RecordSlot.hs  Release.hs  SQL.hs  Segment.hs  Slot.hs  Stats.hs  Tag.hs  Time.hs  Token.hs  (+6 more)
databrary-libdepend-diagnostic/Databrary/Model/Activity/: SQL.hs  Types.hs
databrary-libdepend-diagnostic/Databrary/Routes/: API.hs  JS.hs  JS.hs-boot
databrary-libdepend-diagnostic/Databrary/Service/: Crypto.hs  DB.hs  Entropy.hs  Init.hs  Log.hs  Mail.hs  Messages.hs  Notification.hs  Passwd.hs  Periodic.hs  Types.hs
databrary-libdepend-diagnostic/Databrary/Solr/: Document.hs  Index.hs  Search.hs  Service.hs  Tag.hs
databrary-libdepend-diagnostic/Databrary/Static/: Fillin.hs  Service.hs
databrary-libdepend-diagnostic/Databrary/Store/: AV.hsc  Asset.hs  AssetSegment.hs  CSV.hs  Config.hs  Filename.hs  Probe.hs  Service.hs  Stage.hs  Temp.hs  Transcode.hs  Transcoder.hs  Types.hs  Upload.hs  Zip.hs  avFrame.c  avFrame.h
databrary-libdepend-diagnostic/Databrary/View/: Activity.hs  Angular.hs  Asset.hs  Authorize.hs  Comment.hs  Container.hs  Email.hs  Error.hs  Form.hs  Format.hs  Html.hs  Ingest.hs  Login.hs  Notification.hs  Paginate.hs  Party.hs  Periodic.hs  Record.hs  Register.hs  Root.hs  Template.hs  Token.hs  Transcode.hs  Volume.hs  VolumeAccess.hs  Zip.hs
databrary-libdepend-diagnostic/Databrary/Web/: All.hs  Cache.hs  Coffee.hs  Constants.hs  Files.hs  GZip.hs  Generate.hs  Info.hs  JSHint.hs  Libs.hs  Messages.hs  Routes.hs  Rules.hs  Rules.hs-boot  Service.hs  Stylus.hs  Templates.hs  Types.hs  Uglify.hs
(+137 files in other folders)
