Name:                databrary
Version:             1
Synopsis:            Databrary
Description:         Video data sharing library designed for human subjects research (http://databrary.org) in Haskell.
License:             GPL-3
License-file:        COPYING
Author:              Dylan Simon
Maintainer:          dylan@dylex.net
Stability:           Provisional
Category:            Web
Tested-with:         GHC == 7.10.3
Build-type:          Custom
Cabal-version:       >=1.22

data-files:
  messages.conf,
  schema/*.sql,
  transctl.sh,
  transcode,
  volume.json,
  web/all.min.css,
  web/all.min.css.gz,
  web/all.min.js,
  web/all.min.js.gz,
  web/constants.json,
  web/constants.json.gz,
  web/icons/*.ico,
  web/icons/*.png,
  web/icons/*.svg,
  web/icons/*.svg.gz,
  web/icons/release/*.svg,
  web/icons/release/*.svg.gz,
  web/images/*.png,
  web/images/elements/*.svg,
  web/images/elements/*.svg.gz,
  web/images/filetype/16px/*.svg,
  web/images/filetype/16px/*.svg.gz,
  web/images/grants/*.png,
  web/images/logo/*.png,
  web/images/logo/*.svg,
  web/images/logo/*.svg.gz,
  web/images/social/16px/*.png,
  solr/solr.xml,
  solr/log4j.properties,
  solr/conf/*.xml,
  solr/conf/*.txt

-- Flag devel
--   description: Enable development mode
--   default: False
--   manual: True

-- Flag sandbox
--   description: Enable sandbox/demo mode
--   default: False
--   manual: True

-- Executable schemabrary
--   main-is: Databrary/Setup/DB.hs
--   default-language: Haskell2010
--   build-depends:
--     base == 4.8.*,
--     bytestring >= 0.10,
--     transformers == 0.4.*,
--     transformers-base,
--     mtl >= 2.2.1,
--     monad-control >= 1,
--     lifted-base,
--     template-haskell,
--     filepath,
--     directory,
--     text,
--     unordered-containers,
--     parsec >= 3,
--     resource-pool,
--     network,
--     postgresql-typed,
--     vector,
--     aeson

Executable databrary
  main-is: Databrary/Main.hs
  other-modules: Databrary.Store.AV
  c-sources: Databrary/Store/avFrame.c

  build-depends:
    base == 4.8.*,
    bytestring >= 0.10,
    containers,
    array,
    transformers == 0.4.*,
    transformers-base,
    mtl >= 2.2.1,
    monad-control >= 1,
    lifted-base,
    template-haskell,
    th-lift,
    th-lift-instances,
    haskell-src-meta,
    time,
    unix,
    filepath,
    posix-paths,
    directory,
    process,
    data-default-class,
    text,
    utf8-string,
    hashable >= 1.2.1,
    unordered-containers,
    parsec >= 3,
    attoparsec,
    network,
    network-uri,
    http-types,
    wai,
    wai-extra,
    warp,
    warp-tls,
    case-insensitive,
    aeson,
    vector,
    cookie,
    resource-pool,
    scientific,
    postgresql-typed == 0.4.5,
    memory >= 0.8,
    cryptonite,
    resourcet,
    streaming-commons,
    blaze-builder >= 0.4,
    blaze-markup,
    blaze-html,
    regex-posix,
    bcrypt,
    http-client,
    http-client-tls,
    mime-mail,
    fast-logger,
    digest,
    hjsonschema == 0.9.*,
    file-embed == 0.0.9.1,
    aeson-better-errors > 0.9.0,
    xml,
    zlib,
    range-set-list,
    invertible,
    web-inv-route

  default-language: Haskell2010
  default-extensions: MultiParamTypeClasses, FlexibleContexts, FlexibleInstances, ScopedTypeVariables, ConstraintKinds, PatternGuards

  ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields

  -- if flag(devel)
  --   cpp-options: -DDEVEL
  -- else
  ghc-options: -with-rtsopts -N
  -- if flag(sandbox)
  --  cpp-options: -DSANDBOX

  pkgconfig-depends: libavformat, libswscale, libavcodec, libavutil
  extra-libraries: crack
  -- build-tools: npm
